# cdiscord

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: Findjson-c.cmake  Findlibwebsockets.cmake
include/: cdiscord.h
src/: CMakeLists.txt  cdiscord.c  dc_api.c  dc_api.h  gateway.c  gateway.h  internal.h
